Refactored Soccer Five code to be cleaner
